# helloworld_python_project

./: .env.example  .gitignore  AI_INDEXING.md  DOCKER_SETUP.md  QUICKSTART.md  README.md  dev.sh  docker-compose.yml  pyproject.toml  run.sh
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ImageUpload.tsx  Timeline.tsx
src/: __init__.py  config.py  database.py  db_models.py  indexing_service.py  main.py  models.py  routes.py
tests/: conftest.py  test_config.py  test_routes.py
